placing files in folders

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -135,7 +135,7 @@
 <body>
   <section class="about">
     <div class="main">
-      <img src="body building.jfif">
+      <img src="../images/body building.jfif">
       <div class="about-text">
         <h1>About Us</h1>
         <h4> GYM AND FITNESS</h4>
@@ -178,7 +178,7 @@
 
     </div>
     <div class="image">
-      <img src="gym room.jfif">
+      <img src="../images/gym room.jfif">
     </div>
   </div>
   <div class="bottom">
