--- a/pages/cardio.html
+++ b/pages/cardio.html
@@ -281,27 +281,27 @@ footer{
     <h2 class="h2head">what we offer </h2>
     <div class="images">
     <div class="gallery">
-      <img src="body building.jfif">
+      <img src="../images/body building.jfif">
       <div class="imgtxt">Body Building</div>
     </div>
     <div class="gallery">
-      <img src="wightlift.jfif">
+      <img src="../images/wightlift.jfif">
       <div class="imgtxt">WeightLifting</div>
     </div>
     <div class="gallery">
-      <img src="cardio.jfif">
+      <img src="../images/cardio.jfif">
       <div class="imgtxt">Cardio</div>
     </div>
     <div class="gallery">
-      <img src="aerobics.jfif">
+      <img src="../images/aerobics.jfif">
       <div class="imgtxt">Aerobics</div>
     </div>
     <div class="gallery">
-      <img src="strech.jpg">
+      <img src="../images/strech.jpg">
       <div class="imgtxt">Stretching</div>
     </div>
     <div class="gallery">
-      <img src="yoga.jfif">
+      <img src="../images/yoga.jfif">
       <div class="imgtxt">Yoga Classes</div>
     </div>
   </div>
