--- a/pages/contact us.html
+++ b/pages/contact us.html
@@ -103,7 +103,7 @@
   <div class= "contactinfo">
     <div class="box">
      
-      <img src="map logo.jfif" class="icon">
+      <img src="../images/map logo.jfif" class="icon">
       <div class="text">
         <h3>Address</h3>
         <p>Ground Floor, Keshav Mansion, Off Link Road, Evershine Nagar <br>  Malad West, Mumbai, <br>Maharashtra 400064</p>
@@ -111,7 +111,7 @@
 
     </div>
     <div class="box">
-      <img src="maillogo.jfif" class="icon">
+      <img src="../images/maillogo.jfif" class="icon">
       <div class="text">
         <h3>Email</h3>
         <p>wecare@nikhil.com</p>
@@ -119,7 +119,7 @@
 
     </div>
     <div class="box">
-      <img src="phone logo.jfif" class="icon">
+      <img src="../images/phone logo.jfif" class="icon">
       <div class="text">
         <h3>Phone</h3>
         <p>+91 9322929440 <br> +91 9639576971</p>
