--- a/pages/loginpage.html
+++ b/pages/loginpage.html
@@ -9,7 +9,7 @@
     <style>
         body{
             background-color: blanchedalmond;
-            background-image: url('gymimg.jfif');
+            background-image: url('../images/gymimg.jfif');
             background-size: 100%;
         }
         
