--- a/pages/bodybuilding.html
+++ b/pages/bodybuilding.html
@@ -201,10 +201,10 @@ footer{
   <div class="mid">
     <ul class="navbar">
       <li ><a href="schedules.html">All Classes</a></li>
-      <li ><a href="bodybuilding.html">Body Building</a></li>
+      <li style="text-decoration: underline;"><a href="bodybuilding.html">Body Building</a></li>
       <li><a href="weightlifting.html">WeightLifting</a></li>
-      <li ><a href="cardio.html">Cardio</a></li>
-      <li style="text-decoration: underline;"><a href="aerobics.html">Aerobics</a></li>
+      <li><a href="cardio.html">Cardio</a></li>
+      <li><a href="aerobics.html">Aerobics</a></li>
       <li><a href="streching.html">Stretching</a></li>
       <li><a href="others.html">Others</a></li>
 
@@ -227,21 +227,21 @@ footer{
         </div>
         <tr class="row2">
           <th>08:00AM -<br> 09:00 AM</th>
+          <td>Body <br>Building</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td>aerobics</td>
           <td></td>
     </div>
     </tr>
     <tr class="row1">
       <th>09:00AM - <br>11:00AM</th>
       <td></td>
+      <td>Body <br>Building</td>
       <td></td>
       <td></td>
       <td></td>
-      <td>aerobics</td>
       <td></td>
   </div>
   </tr>
@@ -257,21 +257,21 @@ footer{
   </tr>
   <tr class="row1">
     <th>03:00PM - <br>05:00PM</th>
-    <td>aerobics</td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
+    <td>Body<br> Building</td>
     <td></td>
     </div>
   </tr>
   <tr class="row2">
     <th>07:00PM -<br> 09:00PM</th>
+    <td>Body<br> Building</td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
-    <td>aerobics</td>
     <td></td>
     </div>
   </tr>
@@ -281,27 +281,27 @@ footer{
     <h2 class="h2head">what we offer </h2>
     <div class="images">
     <div class="gallery">
-      <img src="body building.jfif">
+      <img src="../images/body building.jfif">
       <div class="imgtxt">Body Building</div>
     </div>
     <div class="gallery">
-      <img src="wightlift.jfif">
+      <img src="../images/wightlift.jfif">
       <div class="imgtxt">WeightLifting</div>
     </div>
     <div class="gallery">
-      <img src="cardio.jfif">
+      <img src="../images/cardio.jfif">
       <div class="imgtxt">Cardio</div>
     </div>
     <div class="gallery">
-      <img src="aerobics.jfif">
+      <img src="../images/aerobics.jfif">
       <div class="imgtxt">Aerobics</div>
     </div>
     <div class="gallery">
-      <img src="strech.jpg">
+      <img src="../images/strech.jpg">
       <div class="imgtxt">Stretching</div>
     </div>
     <div class="gallery">
-      <img src="yoga.jfif">
+      <img src="../images/yoga.jfif">
       <div class="imgtxt">Yoga Classes</div>
     </div>
   </div>
