--- a/pages/others.html
+++ b/pages/others.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <title>schedules</title>
- 
+  <title>details</title>
 </head>
 <style>
   body {
@@ -201,13 +200,13 @@ footer{
   </H2>
   <div class="mid">
     <ul class="navbar">
-      <li style="text-decoration: underline;"><a href="schedules.html">All Classes</a></li>
-      <li><a href="bodybuilding.html">Body Building</a></li>
+      <li ><a href="schedules.html">All Classes</a></li>
+      <li ><a href="bodybuilding.html">Body Building</a></li>
       <li><a href="weightlifting.html">WeightLifting</a></li>
-      <li><a href="cardio.html">Cardio</a></li>
+      <li ><a href="cardio.html">Cardio</a></li>
       <li><a href="aerobics.html">Aerobics</a></li>
       <li><a href="streching.html">Stretching</a></li>
-      <li><a href="others.html">Others</a></li>
+      <li style="text-decoration: underline;"><a href="others.html">Others</a></li>
 
 
     </ul>
@@ -228,52 +227,52 @@ footer{
         </div>
         <tr class="row2">
           <th>08:00AM -<br> 09:00 AM</th>
-          <td>Body <br>Building</td>
-          <td>Weight <br>Lifting</td>
-          <td>Cardio</td>
+          <td></td>
+          <td></td>
+          <td></td>
           <td>Exercise</td>
-          <td>Aerobics</td>
+          <td></td>
           <td>Cycling</td>
     </div>
     </tr>
     <tr class="row1">
       <th>09:00AM - <br>11:00AM</th>
-      <td>Weight<br>Lifting</td>
-      <td>Body <br>Building</td>
-      <td>Cardio</td>
-      <td>Stretching</td>
-      <td>Aerobics</td>
-      <td>Body<br> Exercise</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>body Exercise</td>
   </div>
   </tr>
   <tr class="row2">
     <th>11:00AM -<br> 12:00PM</td>
-    <td>Yoga</th>
-    <td>Weight<br>Lifting</td>
-    <td>Weight<br>Lifting</td>
-    <td>Cardio</td>
-    <td>Body Relaxtion</td>
-    <td>Stretching</td>
+    <td>yoga</th>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>body Relaxtion</td>
+    <td></td>
     </div>
   </tr>
   <tr class="row1">
     <th>03:00PM - <br>05:00PM</th>
-    <td>Aerobics</td>
-    <td>Weight<br>Lifting</td>
+    <td></td>
+    <td></td>
     <td>Exercise</td>
     <td>Meditation</td>
-    <td>Body<br> Building</td>
-    <td>Stretching</td>
+    <td></td>
+    <td></td>
     </div>
   </tr>
   <tr class="row2">
     <th>07:00PM -<br> 09:00PM</th>
-    <td>Body<br> Building</td>
-    <td>Yoga</td>
-    <td>Weight<br>Lifting</td>
-    <td>Cardio</td>
-    <td>Aerobics</td>
-    <td>break</td>
+    <td></td>
+    <td>yoga</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
     </div>
   </tr>
   </table>
@@ -282,27 +281,27 @@ footer{
     <h2 class="h2head">what we offer </h2>
     <div class="images">
     <div class="gallery">
-      <img src="body building.jfif">
+      <img src="../images/body building.jfif">
       <div class="imgtxt">Body Building</div>
     </div>
     <div class="gallery">
-      <img src="wightlift.jfif">
+      <img src="../images/wightlift.jfif">
       <div class="imgtxt">WeightLifting</div>
     </div>
     <div class="gallery">
-      <img src="cardio.jfif">
+      <img src="../images/cardio.jfif">
       <div class="imgtxt">Cardio</div>
     </div>
     <div class="gallery">
-      <img src="aerobics.jfif">
+      <img src="../images/aerobics.jfif">
       <div class="imgtxt">Aerobics</div>
     </div>
     <div class="gallery">
-      <img src="strech.jpg">
+      <img src="../images/strech.jpg">
       <div class="imgtxt">Stretching</div>
     </div>
     <div class="gallery">
-      <img src="yoga.jfif">
+      <img src="../images/yoga.jfif">
       <div class="imgtxt">Yoga Classes</div>
     </div>
   </div>
