fixed some buttons

--- a/pages/schedules.html
+++ b/pages/schedules.html
@@ -184,7 +184,7 @@ footer{
   <diV class="leftbtn">
   <button class="homebtn">
 
-    <a href="gymwebsite.html">HOME</a>
+    <a href="../gymwebsite.html">HOME</a>
   </button>
 </diV>
   <div class="top">
