--- a/pages/gym registrationpage.html
+++ b/pages/gym registrationpage.html
@@ -14,7 +14,7 @@
 <body>
 <h2> GYM REGISTRATION PAGE </h2>
 
-<form action="C:\gym website\gymwebsite.html"><br>
+<form action="#"><br>
 <label for="fname">Firstname: </label>
     <input type="text" id="Enter Firstname" name="fname" size="30"required/><br>
 <br>
