--- a/pages/loginpage.html
+++ b/pages/loginpage.html
@@ -53,7 +53,7 @@
   <diV class="leftbtn">
   <button class="homebtn">
 
-    <a href="../gymwebsite.html">HOME</a>
+    <a href="../index.html">HOME</a>
   </button>
 </diV>
     <div class="middle">
