--- a/pages/cardio.html
+++ b/pages/cardio.html
@@ -183,7 +183,7 @@ footer{
   <diV class="leftbtn">
   <button class="homebtn">
 
-    <a href="../gymwebsite.html">HOME</a>
+    <a href="../index.html">HOME</a>
   </button>
 </diV>
   <div class="top">
